<AuroraPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aurora="http://schemas.android.com/tools"
    xmlns:Aurora="http://schemas.android.com/apk/res-auto">

    <AuroraPreferenceCategory>
         <tran.com.android.tapla.gamecenter.market.widget.AuroraMarketPreference Aurora:aurorakey="update_settings_key"
          Aurora:auroratitle="@string/update_settings_pref" 
        />

        <tran.com.android.gc.lib.preference.AuroraSwitchPreference Aurora:aurorakey="wifi_download_key"
            Aurora:auroratitle="@string/wifi_download_pref"
            Aurora:auroradefaultValue= "true"/>

        <tran.com.android.gc.lib.preference.AuroraSwitchPreference Aurora:aurorakey="none_download_pic_key"
            Aurora:auroratitle="@string/none_download_pic_pref" />

        <tran.com.android.gc.lib.preference.AuroraSwitchPreference Aurora:aurorakey="hold_app_key"
            Aurora:auroratitle="@string/hold_app_pref" />

    </AuroraPreferenceCategory>

</AuroraPreferenceScreen>