<AuroraPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aurora="http://schemas.android.com/tools"
    xmlns:Aurora="http://schemas.android.com/apk/res-auto">

    <AuroraPreferenceCategory>
         <tran.com.android.gc.lib.preference.AuroraSwitchPreference Aurora:aurorakey="wifi_auto_upgrade_key"
          Aurora:auroratitle="@string/wifi_auto_upgrade" 
         />
         <tran.com.android.gc.lib.preference.AuroraSwitchPreference Aurora:aurorakey="software_auto_update_tip_key"
          Aurora:auroratitle="@string/software_auto_update_tip" 
          Aurora:auroradefaultValue= "true"
         />
    </AuroraPreferenceCategory>

    <AuroraPreferenceCategory>
        
        <tran.com.android.tapla.gamecenter.market.widget.AuroraMarketPreference Aurora:aurorakey="apps_update_ignored_key"
             Aurora:auroratitle="@string/apps_update_ignored" />
 
    </AuroraPreferenceCategory>

</AuroraPreferenceScreen>