<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aurora="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_detail_page_text_color_top_bg"
    android:orientation="vertical" >
    <include layout="@layout/view_page_loading" />

    <RelativeLayout android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_title_length_35"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/avail_update_num_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/app_detail_page_margin_17"
            android:textColor="@color/app_detail_page_text_color_5"
            android:textSize="@dimen/textsize_14" />
        <ImageView
            android:id="@+id/set_update_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/app_detail_page_margin_20"
            android:layout_marginStart="10dp"
            android:src="@drawable/list_arrow_right"/>
        <TextView
            android:id="@+id/update_settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/set_update_iv"
            android:text="@string/app_update_settings"
            android:textColor="@color/app_detail_page_text_color_5"
            android:textSize="@dimen/textsize_14"
            android:gravity="center"/>

        <TextView
            android:id="@+id/update_all_apps_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:paddingRight="@dimen/app_detail_page_margin_17"
            android:paddingLeft="@dimen/app_detail_page_margin_17"
            android:text="@string/update_all_apps"
            android:textColor="@color/update_settings_color"
            android:textSize="@dimen/textsize_14"
            android:visibility="gone"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/no_match_note_text_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/upempty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

       <ImageView android:id="@+id/upempty_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/upempty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/down_man_nodata_text_margintop"
            android:text="@string/page_empty_update"
            android:textColor="@color/down_man_nodata_text"
            android:textSize="@dimen/textsize_empty_view_14" />

        <Button
            android:id="@+id/upempty_btn"
            style="@style/generalButton"
            android:layout_marginTop="@dimen/down_man_nodata_button_margintop"
            android:background="@drawable/button_nodata_selector"
            android:gravity="center"
            android:text="@string/downloadman_go_shopping" />

    </LinearLayout>

    <tran.com.android.gc.lib.widget.AuroraListView
        android:background="@color/white"
        android:id="@+id/avail_update_apps_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        aurora:auroraShowRubbishIcon ="false"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/download_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_detail_page_footer_height"
        android:layout_gravity="bottom" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/no_match_note_text_color" />

    <!--    <ImageView
            android:id="@+id/app_update_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/app_detail_page_margin_12"
            android:layout_marginLeft="@dimen/app_detail_page_margin_17"
            android:layout_marginRight="@dimen/app_detail_page_margin_17"
            android:layout_marginTop="@dimen/app_detail_page_margin_12"
            android:background="@drawable/download_selector" />-->
        <tran.com.android.tapla.gamecenter.market.widget.DetailProgressBtn
            android:id="@+id/app_update_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/app_detail_page_margin_20"
            android:layout_marginRight="@dimen/app_detail_page_margin_20"
            />
        <!--<TextView
            android:id="@+id/update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_by_one_key"
            android:textColor="@color/center_white"
            android:textSize="@dimen/textsize_18" />-->
    </FrameLayout>

</LinearLayout>