<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="64dp"
              android:orientation="vertical"
    >
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/aurora_setting_margin"
        android:background="@color/aurora_setting_margin_color"></View>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <LinearLayout
        android:id="@+id/game_update_setting_linear"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/aurora_setting_margin_start"
            android:textSize="@dimen/aurora_setting_size"
            android:textColor="@color/aurora_setting_text_color"
            android:text="@string/update_settings_pref"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/list_arrow_right"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/aurora_setting_margin"
        android:background="@color/aurora_setting_margin_color"></View>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <LinearLayout
        android:id="@+id/game_down_linear"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/aurora_setting_margin_start"
            android:textSize="@dimen/aurora_setting_size"
            android:textColor="@color/aurora_setting_text_color"
            android:text="@string/wifi_download_pref"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="horizontal">


            <Switch
                android:id="@+id/wifi_down_only_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                style="@style/TalpaOssdk.Widget.CompoundButton.Switch"
               />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/aurora_setting_margin_start"
            android:textSize="@dimen/aurora_setting_size"
            android:textColor="@color/aurora_setting_text_color"
            android:text="@string/none_download_pic_pref"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:orientation="horizontal">


            <Switch
                android:id="@+id/none_download_pic_key_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                style="@style/TalpaOssdk.Widget.CompoundButton.Switch"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/aurora_setting_margin"
        android:background="@color/aurora_setting_margin_color"></View>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/aurora_setting_margin_start"
            android:textSize="@dimen/aurora_setting_size"
            android:textColor="@color/aurora_setting_text_color"
            android:text="@string/hold_app_pref"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="horizontal">


            <Switch
                android:id="@+id/hold_app_key_sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                style="@style/TalpaOssdk.Widget.CompoundButton.Switch"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/aurora_setting_line_color"></View>
</LinearLayout>